# drf-test-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pypi_publish.yaml  test.yaml
drf_test_generator/: apps.py  constants.py  viewset.py
drf_test_generator/management/commands/: generate_viewset_tests.py
tests/: settings.py  test_apps.py  test_generate_viewset_tests_command.py  test_viewset_test_generator.py  test_viewset_test_generator_pytest.py  test_viewset_test_generator_unittest.py
