[metadata]
name = drf-test-generator
version = 0.0.5
description = A Django app to generate basic tests for Django Rest Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/saadmk11/drf-test-generator
author = Maksudul Haque
author_email = saad.mk112@gmail.com
keywords =
    Django
    Django Rest Framework
    Testing
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = drf_test_generator
include_package_data = True
python_requires = >=3.7
install_requires =
    django>=3.2
    djangorestframework>=3.12

[options.packages.find]
where = .

[coverage:run]
branch = True
parallel = True
source =
    drf_test_generator
    tests

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError

[coverage:paths]
source = .

[flake8]
max-line-length = 88
